# AstroBot

./: .replit  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  app.py  bot.py  build-tailwind.js  config.py  forms.py  main.py  mkdocs.yml  models.py  models.py.new  package-lock.json  package.json  pyproject.toml  routes.py  socket_events.py  tailwind.config.js
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY_ISSUE_TEMPLATE.md  TEST_FAILURE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ai-autonomous-coordinator.yml  ai-code-review.yml  ai-comment-handler.yml  ai-conversation-handler.yml  ai-issue-processor.yml  ai-manual-tasks.yml  ai-pr-review.yml  ai-scheduled-maintenance.yml  auto-fix-code-issues.yml  code-quality.yml  deploy.yml  pages-deployment.yml  security-scan.yml  sedFE3BPQ  self-healing.yml  (+1 more)
astrobot_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
attached_assets/: message (1).txt
commands/: ai_commands.py  community_commands.py  minecraft_commands.py  twitch_commands.py
docs/: ai-integrations.md  ai-workflows.md  api-reference.md  contributing.md  getting-started.md  index.md  troubleshooting.md  user-guide.md
services/: ai_service.py  anthropic_service.py  minecraft_service.py  mongo_service.py  onboarding_service.py  openai_service.py  twitch_service.py
site/: 404.html  index.html
templates/: base.html  error.html  feedback.html  index.html  leaderboard.html  reviews.html  suggestions.html
utils/: constants.py  embed_creator.py  error_handler.py  permissions.py
(+59 files in other folders)
