[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.51.0",
    "discord-py>=2.5.2",
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "mctools>=1.3.0",
    "motor>=3.7.0",
    "openai>=1.78.0",
    "psycopg2-binary>=2.9.10",
    "slack-sdk>=3.35.0",
    "sqlalchemy>=2.0.40",
    "trafilatura>=2.0.0",
    "twilio>=9.6.0",
    "flask-wtf>=1.2.2",
]
